--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ dependencies = [
     "black>=26.1.0",
     "isort>=7.0.0",
     "langchain>=1.2.9",
+    "langchain-core>=0.3.0",
+    "langchain-google-genai>=0.1.0",
     "langchain-openai>=1.1.7",
+    "langchain-ollama>=0.1.0",
     "python-dotenv>=1.2.1",
 ]
